# extrator_bancario

./: .gitignore  CSS Centralizado - Sistema Humaniza.md  app.py  app_com_categorizacao.py  app_com_rotas.py  app_corrigido.py  app_filtrado.py  categorizador_despesas.py  categorizador_receitas_simples.py  estilo_unificado.py  exportador_relatorios.py  extrator_ofx.py  extrator_ofx_corrigido.py  gerenciador_persistencia.py  gerenciador_persistencia_unificado.py  gerenciador_receitas_simples.py  gerenciador_resultado.py  limpar_dados_sistema.py  pagina_despesas.py  pagina_receitas_simples.py  pagina_resultado.py  pyproject.toml  styles.css  test_categoria_receita.py  teste_divisao_receitas_cartao.py  utils_css.py  ✅ FILTROS IMPLEMENTADOS - Lançamentos Informativos.md  🏷️ SISTEMA DE CATEGORIZAÇÃO AUTOMÁTICA IMPLEMENTADO.md  💰 SISTEMA SIMPLIFICADO DE RECEITAS IMPLEMENTADO.md  📅 FILTROS DE DATA NA SEÇÃO DESPESAS.md  🔧 CORREÇÕES IMPLEMENTADAS - CATEGORIZAÇÃO DE RECEITAS.md  🔧 GERENCIADOR DE PERSISTÊNCIA UNIFICADO.md  🧭 APLICAÇÃO COM NAVEGAÇÃO POR ROTAS.md
dados_persistentes/: configuracoes.json  despesas.csv  historico_fechamentos.json  historico_processamentos.json  receitas_simples.csv  resultados_mensais.csv
dados_persistentes/backups/: despesas_backup_20251021_132032.csv  despesas_backup_20251105_122236.csv  despesas_backup_20251126_120709.csv  historico_backup_20251021_124216.json  historico_backup_20251021_131944.json  historico_backup_20251105_122236.json  receitas_backup_20251021_124216.csv  receitas_backup_20251021_132032.csv  receitas_backup_20251105_122236.csv
