[tool.poetry]
name = "extrator-bancario"
version = "0.1.0"
description = ""
authors = ["ieplif <fszribeiro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.49.1"
pymupdf = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
